[package]
name = "graphql-introspection-parser"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = ""
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphql-parser = "0.2"